--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -6,3 +6,23 @@ body,
   margin: 0;
   padding: 0;
 }
+
+.el-breadcrumb {
+  margin-bottom: 30px;
+  font-size: 14px;
+}
+
+.el-card {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15) !important;
+}
+
+.el-table {
+  margin-top: 30px;
+  font-size: 14px;
+}
+
+.el-pagination {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+}
